<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/used_cities"
            android:icon="@drawable/ic_action_cities"
            android:title="@string/cities" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_action_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_action_email"
            android:title="@string/feedback_email" />
        <item
            android:id="@+id/about_developer"
            android:icon="@drawable/brain"
            android:title="@string/about_developer" />
    </group>
</menu>
