<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/locate"
        android:icon="@drawable/ic_action_location"
        android:orderInCategory="2"
        android:title="@string/location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/select_city"
        android:icon="@drawable/ic_action_cities"
        android:orderInCategory="3"
        android:title="@string/select_city"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sensors"
        android:icon="@drawable/ic_action_sensors"
        android:orderInCategory="5"
        android:title="@string/sensors"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_action_exit"
        android:orderInCategory="99"
        android:title="@string/menu_exit"
        app:showAsAction="ifRoom" />
</menu>
