<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/properties"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:textAlignment="center"
    android:paddingStart="@dimen/properties_weather_indent"
    android:paddingEnd="@dimen/properties_weather_indent"
    app:layout_constraintTop_toBottomOf="@id/icon"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:text="@string/felt"
        android:textSize="@dimen/properties_weather_name_text_size"
        android:padding="@dimen/properties_weather_padding_textview"
        android:layout_gravity="bottom"/>

    <TextView
        android:id="@+id/temperature__felt"
        android:textSize="@dimen/properties_weather_value_text_size"
        android:layout_columnSpan="@integer/secondary"
        android:layout_gravity="start|bottom"
        android:padding="@dimen/properties_weather_padding_textview"
        />

    <TextView
        android:text="@string/wind"
        android:layout_column="@integer/zero"
        android:layout_gravity="bottom"
        android:textSize="@dimen/properties_weather_name_text_size"
        android:padding="@dimen/properties_weather_padding_textview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_columnSpan="2"
        android:gravity="start|bottom">

        <TextView
            android:id="@+id/direction"
            android:textSize="@dimen/properties_weather_value_text_size"
            android:gravity="start|bottom"
            android:padding="@dimen/properties_weather_padding_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/wind"
            android:textSize="@dimen/properties_weather_value_text_size"
            android:gravity="end|bottom"
            android:padding="@dimen/properties_weather_padding_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <TextView
        android:text="@string/humidity"
        android:layout_gravity="bottom"
        android:textSize="@dimen/properties_weather_name_text_size"
        android:padding="@dimen/properties_weather_padding_textview"/>

    <TextView
        android:id="@+id/humidity"
        android:textSize="@dimen/properties_weather_value_text_size"
        android:layout_gravity="start|bottom"
        android:layout_columnSpan="@integer/secondary"
        android:padding="@dimen/properties_weather_padding_textview"/>

    <TextView
        android:text="@string/pressure"
        android:layout_column="@integer/zero"
        android:layout_gravity="bottom"
        android:textSize="@dimen/properties_weather_name_text_size"
        android:padding="@dimen/properties_weather_padding_textview"/>

    <TextView
        android:id="@+id/pressure"
        android:textSize="@dimen/properties_weather_value_text_size"
        android:layout_columnSpan="@integer/secondary"
        android:layout_gravity="start|bottom"
        android:padding="@dimen/properties_weather_padding_textview"/>

    <TextView
        android:text="@string/overcast"
        android:layout_column="@integer/zero"
        android:textSize="@dimen/properties_weather_name_text_size"
        android:layout_gravity="bottom"
        android:padding="@dimen/properties_weather_padding_textview"/>

    <TextView
        android:id="@+id/overcast"
        android:textSize="@dimen/properties_weather_value_text_size"
        android:layout_columnSpan="@integer/secondary"
        android:layout_gravity="start|bottom"
        android:padding="@dimen/properties_weather_padding_textview"/>

    <TextView
        android:text="@string/rainfall"
        android:layout_column="@integer/zero"
        android:textSize="@dimen/properties_weather_name_text_size"
        android:layout_gravity="bottom"
        android:padding="@dimen/properties_weather_padding_textview"/>

    <TextView
        android:id="@+id/rainfall"
        android:textSize="@dimen/properties_weather_value_text_size"
        android:layout_columnSpan="@integer/secondary"
        android:layout_gravity="start|bottom"
        android:padding="@dimen/properties_weather_padding_textview"/>

</GridLayout>