<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sensor="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <reschikov.geekbrains.androidadvancedlevel.weatherapplication.ui.customView.SensorView
        android:id="@+id/cv_pressureMeter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/indent"
        android:layout_weight="1"
        android:padding="@dimen/half_an_indent"
        sensor:cv_activeColor="#FFFF00"
        sensor:cv_disableColor="#d7d7d7"
        sensor:cv_textSize="36sp"
        sensor:cv_textColor="@color/colorAccent"
        sensor:cv_widthStroke="4dp"
        sensor:cv_srcDrawable="@drawable/ic_atmospheric_pressure"
        sensor:cv_SensorName="@string/pressure_meter"/>

    <reschikov.geekbrains.androidadvancedlevel.weatherapplication.ui.customView.SensorView
        android:id="@+id/cv_temperatureSensor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/indent"
        android:layout_weight="1"
        android:padding="@dimen/half_an_indent"
        sensor:cv_activeColor="#FFFF00"
        sensor:cv_disableColor="#d7d7d7"
        sensor:cv_textColor="@color/colorAccent"
        sensor:cv_textSize="36sp"
        sensor:cv_srcDrawable="@drawable/ic_thermometer_high_temperature"
        sensor:cv_widthStroke="4dp"
        sensor:cv_SensorName="@string/temperature_sensor"/>

    <reschikov.geekbrains.androidadvancedlevel.weatherapplication.ui.customView.SensorView
        android:id="@+id/cv_humiditySensor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/indent"
        android:layout_weight="1"
        android:padding="@dimen/half_an_indent"
        sensor:cv_activeColor="#FFFF00"
        sensor:cv_disableColor="#d7d7d7"
        sensor:cv_textSize="36sp"
        sensor:cv_textColor="@color/colorAccent"
        sensor:cv_widthStroke="4dp"
        sensor:cv_srcDrawable="@drawable/ic_humidity"
        sensor:cv_SensorName="@string/humidity_sensor"/>

</LinearLayout>


