<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width = "match_parent"
    android:layout_height = "wrap_content"
    android:fitsSystemWindows = "true"
    >

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:fitsSystemWindows = "true"
        app:contentScrim = "?attr/colorPrimary"
        app:titleEnabled="false"
        app:layout_scrollFlags = "scroll|exitUntilCollapsed" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:fitsSystemWindows = "true"
            android:background="@color/white"
            app:layout_collapseMode="parallax"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sender_email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/sender_frame_fields_text_size"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sender_mail_password"
                    android:inputType="textPassword|textVisiblePassword"
                    android:textSize="@dimen/sender_frame_fields_text_size"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/topic_letter"
                    android:inputType="text"
                    android:textSize="@dimen/sender_frame_fields_text_size"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id = "@+id/toolbar"
            android:layout_width = "match_parent"
            android:layout_height = "?attr/actionBarSize"
            android:background = "@color/colorPrimary"
            app:layout_collapseMode = "pin"
            android:theme="@style/AppTheme.AppBarOverlay"
            />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>

